--- a/commande.html
+++ b/commande.html
@@ -112,20 +112,27 @@
       </label>
 
       <label>Style musical</label>
-      <select name="style">
-        <option>Trap</option>
-        <option>RnB</option>
-        <option>Drill</option>
-        <option>Rage / Plug</option>
-        <option>Afro</option>
-        <option>2-Step / Chill</option>
-        <option>Pop</option>
-        <option>Hip-Hop</option>
-        <option>New Wave</option>
-        <option>Reggaeton</option>
-        <option>Dancehall</option>
-        <option>Autre</option>
-      </select>
+<select name="style">
+  <option>Afro</option>
+  <option>Amapiano</option>
+  <option>Dancehall</option>
+  <option>Drill</option>
+  <option>Hip-Hop</option>
+  <option>Hyperpop</option>
+  <option>Hypertrap</option>
+  <option>Jazz</option>
+  <option>Lo-Fi</option>
+  <option>New Wave</option>
+  <option>Plug</option>
+  <option>Pop</option>
+  <option>R&B</option>
+  <option>Rage Jersey</option>
+  <option>Reggae</option>
+  <option>Reggaeton</option>
+  <option>Rock</option>
+  <option>Trap</option>
+  <option>Autre</option>
+</select>
 
       <label>Message complémentaire</label>
       <textarea name="message"></textarea>
