--- a/commande.html
+++ b/commande.html
@@ -126,10 +126,11 @@
   <option>Plug</option>
   <option>Pop</option>
   <option>R&B</option>
-  <option>Rage Jersey</option>
+  <option>Rage</option>
   <option>Reggae</option>
   <option>Reggaeton</option>
   <option>Rock</option>
+  <option>Jersey</option>
   <option>Trap</option>
   <option>Autre</option>
 </select>
