--- a/commande.html
+++ b/commande.html
@@ -132,6 +132,7 @@
   <option>Rock</option>
   <option>Jersey</option>
   <option>Trap</option>
+  <option>Techno</option>
   <option>Autre</option>
 </select>
 
